# ExoPlayer

./: README.md
demos/main/: build.gradle
demos/main/src/main/: AndroidManifest.xml
demos/main/src/main/java/com/google/android/exoplayer2/demo/: SampleChooserActivity.java  TestActivity.java
demos/main/src/main/res/layout/: activity_video.xml  sample_chooser_activity.xml
demos/main/src/main/res/xml/: network_security_config.xml
extensions/ffmpeg/: build.gradle
extensions/ffmpeg/src/main/java/com/google/android/exoplayer2/ext/ffmpeg/: FfmpegLibrary.java  FfmpegVideoDecoder.java  FfmpegVideoRenderer.java
extensions/ffmpeg/src/main/jni/: CMakeLists.txt  build_android_arm64-v8a_clang.sh  build_ffmpeg.sh  ffmpeg_jni.cc  native-lib.cpp  test.sh
